--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
 
-    <title>Bubble</title>
+    <title>Bubble Maker</title>
   </head>
   <body>
-    <h1>0</h1>
+    <h1>Cliquez sur les bulles</h1>
+    <h2>0</h2>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
