ajput et mise en commentaire de tempsPass, timeOnPage, successMessage, à revoir

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Cliquez sur les bulles</h1>
     <h2>0</h2>
+    <div id="successMessage"></div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
